--- a/bai4.html
+++ b/bai4.html
@@ -8,14 +8,18 @@
 <script>
 let arr=[[1,2,3],
 [7,6,5],
-    [3,4,5]]
-let sum=0;
-for (let i = 0; i < arr.length; i++) {
-    for (let j = 0; j < arr[i].length; j++) {
-        if (i==j)
-        sum += arr[i][j];
+    [3,4,5]];
+function sumArr(arr) {
+    let sum = 0;
+    for (let i = 0; i < arr.length; i++) {
+        for (let j = 0; j < arr[i].length; j++) {
+            if (i == j)
+                sum += arr[i][j];
+        }
     }
-}document.write(sum);
+    return sum;
+}let result = sumArr(arr);
+document.write(result);
 
 </script>
 </body>
