--- a/bai2.html
+++ b/bai2.html
@@ -11,12 +11,14 @@
     function sumArr(arr) {
         let sum=0;
     for (i=0;i<arr.length;i++){
-    if(arr[i]%2 != 0){
+        let canculate = arr[i]%2
+    if(canculate != 0){
         sum += arr[i];
     }}
     return sum;
     }
-    document.getElementById("d").innerHTML=sumArr(arr)
+    let result = sumArr(arr);
+    document.getElementById("d").innerHTML=result;
 </script>
 </body>
 </html>
